# cookiecutter-pypackage

./: 404.html  README.md  cookiecutter.json  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tox.ini
.github/workflows/: dev.yml  publish.yml
console_script_setup/: index.html
docs/: tutorial.md
faq/: index.html
history/: index.html
pypi_release_checklist/: index.html
search/: search_index.json
tests/: test_bake_project.py
tutorial/: index.html
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  setup.cfg  tox.ini
{{cookiecutter.project_slug}}/.github/workflows/: dev.yml
{{cookiecutter.project_slug}}/docs/: installation.md
{{cookiecutter.project_slug}}/tests/: conftest.py  test_cli.py
{{cookiecutter.project_slug}}/{{cookiecutter.pkg_name}}/: cli.py  {{cookiecutter.pkg_name}}.py
