[tool]
[tool.poetry]
name = "cookiecutter-pypackage"
version = "1.2.0"
description = "Cookiecutter template for a Python package"
license = "BSD-3-Clause"
authors = ["Altaf Ali <altaf@firecrest.io>"]
readme = "README.md"
repository = "https://github.com/altaf-ali/cookiecutter-pypackage"
documentation = "https://altaf-ali.github.io/cookiecutter-pypackage/"
keywords = ['cookiecutter', 'template', 'package']

include = [
  '{{cookiecutter.project_slug}}/**/*',
  'cookiecutter.json',
  'hooks/*'
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pip = "^23.1.0"
cookiecutter = "2.1.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
click = "^8.0.1"
toml = "^0.10.2"
tox = "^4.4.6"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-cookies = "^0.7.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.4.2"
mkdocs-include-markdown-plugin = "^3.9.1"
mkdocs-material = "^9.1.0"
mkdocs-material-extensions = "^1.1.1"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
