{%- set license_classifiers = {
    'MIT': 'License :: OSI Approved :: MIT License',
    'BSD-3-Clause': 'License :: OSI Approved :: BSD License',
    'ISC': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache-2.0': 'License :: OSI Approved :: Apache Software License',
    'GPL-3.0-only': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} -%}
[tool]
[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
description = "{{ cookiecutter.project_short_description }}."
authors = ["{{ cookiecutter.full_name.replace('\"', '\\\"') }} <{{ cookiecutter.email }}>"]
readme = "README.md"
{%- if cookiecutter.open_source_license in license_classifiers %}
license =  "{{ cookiecutter.open_source_license }}"
{%- endif %}
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
{%- if cookiecutter.open_source_license in license_classifiers %}
    '{{ license_classifiers[cookiecutter.open_source_license] }}',
{%- endif %}
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
packages = [
    { include = "{{ cookiecutter.pkg_name }}" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

{%- if cookiecutter.command_line_interface|lower == 'click' %}
click = {version = "^8.1.3"}
{%- elif cookiecutter.command_line_interface|lower == 'typer' %}
typer = {version = "^0.6.1"}
{%- endif %}

{%- if cookiecutter.use_autoflake == 'y' %}
autoflake = {version = "^1.5.3", optional = true}
{%- endif %}
black = { version = "^22.8.0", optional = true}
bump2version = {version = "^1.0.1", optional = true}
flake8 = { version = "^5.0.4", optional = true}
flake8-docstrings = { version = "^1.6.0", optional = true }
isort = { version = "^5.10.1", optional = true}
mkdocs = { version = "^1.3.1", optional = true}
mkdocs-autorefs = {version = "^0.4.1", optional = true}
mkdocs-include-markdown-plugin  = { version = "^3.7.1", optional = true}
mkdocs-material = { version = "^8.5.0", optional = true}
mkdocstrings = { version = "^0.19.0", optional = true}
mkdocstrings-python = { version = "^0.8.0", optional = true}
mkdocs-material-extensions = { version = "^1.0.3", optional = true}
{%- if cookiecutter.use_mypy == 'y' %}
mypy = {version = "^0.971", optional = true}
{%- endif %}
pytest = { version = "^7.1.3", optional = true}
pytest-cov = { version = "^3.0.0", optional = true}
pre-commit = {version = "^2.12.0", optional = true}
toml = {version = "^0.10.2", optional = true}
tox = { version = "^3.26.0", optional = true}
twine = { version = "^4.0.1", optional = true}
virtualenv = { version = "^20.16.5", optional = true}

[tool.poetry.extras]
test = [
    {%- if cookiecutter.use_autoflake == 'y' %}
    "autoflake",
    {%- endif %}
    "black",
    "flake8",
    "flake8-docstrings",
    "isort",
    {%- if cookiecutter.use_mypy == 'y' %}
    "mypy",
    {%- endif %}
    "pytest",
    "pytest-cov"
    ]

dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml", "bump2version"]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-material-extension",
    "mkdocs-autorefs"
    ]

{%- if cookiecutter.command_line_interface|lower in ['click', 'typer'] %}
[tool.poetry.scripts]
{{ cookiecutter.project_slug }} = '{{ cookiecutter.pkg_name }}.cli:main'

{%- endif %}
[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
