{%- set license_classifiers = {
    'MIT': 'License :: OSI Approved :: MIT License',
    'BSD-3-Clause': 'License :: OSI Approved :: BSD License',
    'ISC': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache-2.0': 'License :: OSI Approved :: Apache Software License',
    'GPL-3.0-only': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} -%}
[tool]
[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
description = "{{ cookiecutter.project_short_description }}."
authors = ["{{ cookiecutter.full_name.replace('\"', '\\\"') }} <{{ cookiecutter.email }}>"]
readme = "README.md"
{%- if cookiecutter.open_source_license in license_classifiers %}
license =  "{{ cookiecutter.open_source_license }}"
{%- endif %}
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
{%- if cookiecutter.open_source_license in license_classifiers %}
    '{{ license_classifiers[cookiecutter.open_source_license] }}',
{%- endif %}
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
packages = [
    { include = "{{ cookiecutter.pkg_name }}" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pip = "^23.1.2"

{%- if cookiecutter.command_line_interface|lower == 'click' %}
click = "^8.1.4"
{%- elif cookiecutter.command_line_interface|lower == 'typer' %}
typer = "^0.7.0"
{%- endif %}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
{%- if cookiecutter.use_autoflake == 'y' %}
autoflake = "^1.7.8"
{%- endif %}

black = "^23.1.0"
bump2version = "^1.0.1"
flake8 = "^5.0.4"
flake8-docstrings = "^1.7.0"
isort = "^5.12.0"
{%- if cookiecutter.use_mypy == 'y' %}
mypy = "^v1.0.1"
mypy-extensions = "^1.0.0"
{%- endif %}
pre-commit = "^3.1.1"
toml = "^0.10.2"
tox = "^4.4.6"
twine = "^4.0.2"
virtualenv = "^20.20.0"

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.4.2"
mkdocs-autorefs = "^0.4.1"
mkdocs-include-markdown-plugin = "^3.9.1"
mkdocs-material = "^9.1.0"
mkdocstrings = "^0.20.0"
mkdocstrings-python = "^0.8.3"
mkdocs-material-extensions = "^1.1.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

{%- if cookiecutter.command_line_interface|lower in ['click', 'typer'] %}
[tool.poetry.scripts]
{{ cookiecutter.project_slug }} = '{{ cookiecutter.pkg_name }}.cli:main'

{%- endif %}
[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
